createProfile pagina aangemaakt, deze moet worden opgeslagen in de database

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,32 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-
-<body class="login">
-    <main>
-        <section>
-            <h1>Registreren</h1>
-            <form method="POST" action="/registered">
-                <label for="email">Wat is je e-mail?</label>
-                <input type="text" name="email" required="required">
-                <label for="username">Wat wil je als gebruikersnaam?</label>
-                <input type="text" name="username" required="required">
-                <label for="password">Wat wil je als wachtwoord?</label>
-                <input type="password" name="password" required="required">
-                <label for="name">Wat is je echte naam?</label>
-                <input type="text" name="name" required="required">
-                <label for="age">Hoe oud ben je?</label>
-                <input type="text" name="age" required="required">
-                <button type="submit">Let's go</button>
-            </form>
-            <p class="berichtje">Al een account? <a class="linkje" href="/login">log in!</a></p>
-        </section>
-    </main>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=\, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body></body>
 </html>
