register formulier en profiel formulier aangemaakt

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -32,9 +32,21 @@
                 <label for="birthdate">Geboortedatum</label>
                 <input type="date" name="birthdate" id="birthdate" required />
               </li>
+              <li>
+                <label for="man">man</label>
+                <input type="radio" name="sex" id="man" value="man" required />
+                <label for="vrouw">vrouw</label>
+                <input
+                  type="radio"
+                  name="sex"
+                  id="vrouw"
+                  value="vrouw"
+                  required
+                />
+              </li>
             </ul>
           </section>
-          <button type="submit">Let's go</button>
+          <button type="submit">Maak account aan</button>
         </form>
         <p class="berichtje">
           Al een account? <a class="linkje" href="/login">log in!</a>
