--- a/views/createProfile.ejs
+++ b/views/createProfile.ejs
@@ -12,7 +12,7 @@
       <h3>Vul deze gegevens in en start met liken</h3>
     </header>
     <main class="createProfile">
-      <form action="/createProfile" method="POST" enctype="multipart/form-data">
+      <form action="/create" method="POST" enctype="multipart/form-data">
         <div>
           <label for="name"> Naam </label>
           <input type="text" id="name" name="name" required />
