start implementatie profiel bewerken

--- a/views/createProfile.ejs
+++ b/views/createProfile.ejs
@@ -25,16 +25,16 @@
             <li class="sport">
               <input
                 type="checkbox"
-                name="sport"
+                name="sports"
                 id="checkbox1"
                 value="voetbal"
               />
-              <label for="chekcbox1">Voetbal</label>
+              <label for="checkbox1">Voetbal</label>
             </li>
             <li class="sport">
               <input
                 type="checkbox"
-                name="sport"
+                name="sports"
                 id="checkbox2"
                 value="Hockey"
               />
@@ -43,7 +43,7 @@
             <li class="sport">
               <input
                 type="checkbox"
-                name="sport"
+                name="sports"
                 id="checkbox3"
                 value="Basketbal"
               />
@@ -52,7 +52,7 @@
             <li class="sport">
               <input
                 type="checkbox"
-                name="sport"
+                name="sports"
                 id="checkbox4"
                 value="Tennis"
               /><label for="checkbox4">Tennis</label>
