--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= profile.name%></title>
+    <title>Your profile</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Dit is jouw profiel</h1>
+      <a href="/create">Ga terug</a>
+    </header>
+    <main><%= profile %></main>
+  </body>
 </html>
