push user model and profile model voor publieke toegang

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,6 +11,6 @@
       <h1>Dit is jouw profiel</h1>
       <a href="/create">Ga terug</a>
     </header>
-    <main><%= profile %></main>
+    <main><%= profile.name %></main>
   </body>
 </html>
