profile creëren + zoeken werkt

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,6 +11,16 @@
       <h1>Dit is jouw profiel</h1>
       <a href="/create">Ga terug</a>
     </header>
-    <main><%= profile.name %></main>
+    <main>
+      <p><%=profile.name%></p>
+      <ul>
+        <% profile.sports.forEach((sport)=>{ %>
+        <li><%= sport %></li>
+        <%})%>
+      </ul>
+      <p><%=profile.sex%></p>
+      <p><%=profile.bio%></p>
+      <img src="<%=profile.upload%>" alt="" />
+    </main>
   </body>
 </html>
