--- a/views/createProfile.ejs
+++ b/views/createProfile.ejs
@@ -17,6 +17,14 @@
           <label for="name"> Naam </label>
           <input type="text" id="name" name="name" required />
         </div>
+        <div>
+          <label for="man">Man</label>
+          <input type="radio" id="man" name="sex" value="man" />
+          <label for="vrouw">Vrouw</label>
+          <input type="radio" id="vrouw" name="sex" value="vrouw" />
+          <label for="anders">Anders</label>
+          <input type="radio" id="anders" name="sex" value="anders" />
+        </div>
         <label for="sports">Welke sporten vind je leuk?</label>
         <fieldset>
           <legend>Vink aan wat je leuk vindt</legend>
