fixed image src in profile.ejs

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -20,7 +20,7 @@
       </ul>
       <p><%=profile.sex%></p>
       <p><%=profile.bio%></p>
-      <img src="<%=profile.upload%>" alt="" />
+      <img src="/uploads/<%=profile.upload%>" alt="" />
     </main>
   </body>
 </html>
