profiel bewerken werktn u ook, beginnen met het verwijderen van profiel

--- a/views/createProfile.ejs
+++ b/views/createProfile.ejs
@@ -44,7 +44,7 @@
                 type="checkbox"
                 name="sports"
                 id="checkbox2"
-                value="Hockey"
+                value="hockey"
               />
               <label for="checkbox2">Hockey</label>
             </li>
@@ -53,7 +53,7 @@
                 type="checkbox"
                 name="sports"
                 id="checkbox3"
-                value="Basketbal"
+                value="basketbal"
               />
               <label for="checkbox3"> Basketbal</label>
             </li>
@@ -62,7 +62,7 @@
                 type="checkbox"
                 name="sports"
                 id="checkbox4"
-                value="Tennis"
+                value="tennis"
               /><label for="checkbox4">Tennis</label>
             </li>
           </ul>
