--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
-  <body class="login">
+  <body class="register">
     <main>
       <section>
         <h1>Registreren</h1>
@@ -26,7 +26,7 @@
               </li>
               <li>
                 <label for="password">Wachtwoord</label>
-                <input type="text" name="password" id="password" required />
+                <input type="password" name="password" id="password" required />
               </li>
               <li>
                 <label for="birthdate">Geboortedatum</label>
