--- a/views/createProfile.ejs
+++ b/views/createProfile.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maak je profiel aan</title>
-  </head>
+<%- include('partials/head') %>
   <body>
     <header>
       <h1>Maak je profiel compleet</h1>
@@ -89,4 +82,4 @@
       </form>
     </main>
   </body>
-</html>
+
