--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
 
+<%- include('partials/head') %>
   <body class="register">
     <main>
       <section>
@@ -54,4 +48,4 @@
       </section>
     </main>
   </body>
-</html>
+
