--- a/static/stylesheets/scss/_reset.scss
+++ b/static/stylesheets/scss/_reset.scss
@@ -39,3 +39,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     border-collapse: collapse;
     border-spacing: 0; }
   
+
+/* Remove all default styles */
+
+a {
+  text-decoration: none;
+}
