--- a/static/stylesheets/scss/_colors.scss
+++ b/static/stylesheets/scss/_colors.scss
@@ -10,7 +10,7 @@ $text-color: #ffffff;
 
 $button-default: #000000;git 
 
-$border-radius: .2em; 
+$radius-border: .2em; 
 
 $enabled-color:#000000;
 
