--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,6 +10,7 @@
     <header>
       <h1>Dit is jouw profiel</h1>
       <a href="/create">Ga terug</a>
+      <a href="/chat">Chat</a>
       <a href="/edit/<%= profile._id%>">Bewerken</a>
       <p><%= profile._id%></p>
     </header>
