--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -31,40 +31,13 @@
           <%if(profile.sex==='anders'){%> checked <%}%>/>
         </div>
         <label for="sports">Welke sporten vind je leuk?</label>
-        <fieldset>
-          <legend>Vink aan wat je leuk vindt</legend>
-
-          <ul class="sportsList">
-            <li class="sport">
-              <input type="checkbox" name="sports" id="checkbox1"
-              value="voetbal" <% if(profile.sports.includes('voetbal')){%>
-              checked<%}%> />
-              <label for="checkbox1">Voetbal</label>
-            </li>
-            <li class="sport">
-              <input type="checkbox" name="sports" id="checkbox2" value="hockey"
-              <% if(profile.sports.includes('hockey')){%> checked<%}%> />
-              <label for="checkbox2">Hockey</label>
-            </li>
-            <li class="sport">
-              <input type="checkbox" name="sports" id="checkbox3"
-              value="basketbal" <% if(profile.sports.includes('basketbal')){%>
-              checked<%}%> />
-              <label for="checkbox3"> Basketbal</label>
-            </li>
-            <li class="sport">
-              <input type="checkbox" name="sports" id="checkbox4" value="tennis"
-              <% if(profile.sports.includes('tennis')){%> checked<%}%> /><label
-                for="checkbox4"
-                >Tennis</label
-              >
-            </li>
-          </ul>
-          <div class="addSport">
-            <label for="addSport">Voeg jouw sport toe</label>
-            <input type="text" id="addSport" name="addSport" />
-          </div>
-        </fieldset>
+          <select name="sport" id="selectSport">
+            <option value="Voetbal">Voetbal</option>
+            <option value="Basketbal">Basketbal</option>
+            <option value="Hockey">Hockey</option>
+            <option value="Tennis">Tennis</option>
+            <option value="Formule1">Formule1</option>
+          </select>
         <div class="bio">
           <label for="bio">Vertel iets over jezelf</label>
           <textarea name="bio" id="bio"><%=profile.bio%></textarea>
