--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,7 @@
             <ul>
                 <li><a href="/home">home</a></li>
                 <li><a href="/profile">profile</a></li>
-                <li><a href="/chats">chats</a></li>
+                <li><a href="/chat">chats</a></li>
             </ul>
         </nav>
 </body>
