--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,8 +1,9 @@
 <%- include('partials/head') %>
+<%- include('partials/nav') %>
   <body>
     <header>
       <h1>Dit is jouw profiel</h1>
-      <a href="/create">Ga terug</a>
+      <a href="/login">uitloggen</a>
       <a href="/chat">Chat</a>
       <a href="/edit/<%= profile._id%>">Bewerken</a>
       <p><%= profile._id%></p>
