--- a/static/stylesheets/scss/_layout.scss
+++ b/static/stylesheets/scss/_layout.scss
@@ -209,11 +209,6 @@ nav{
         family: Futura Light;
     }
 
-    text:{
-        
-
-       
-    }
     ul{
     display:flex;
     justify-content: space-evenly;
@@ -229,3 +224,50 @@ nav{
         }
      
 }
+
+
+
+/* Buttons */
+nav li:enabled {
+    background-color: $enabled-color;
+    color: $text-color;
+    border-style: none;
+    width: 50vw;
+    padding: 1.5em 1em;
+    font-family: Futura;
+    font-size: .7em;
+    letter-spacing: .2em;
+    border-radius: $radius-border;
+    text-transform: uppercase;
+
+    &:hover {
+        background-color: $hover-color;
+        border: $hover-border;
+    }
+
+    &:active {
+        background-color: $active-color;
+    }
+
+    &:focus {
+        background-color: $focus-color;
+        box-shadow: $focus-shadow;
+    }
+
+    &:disabled {
+        background-color: $disabled-color;
+    }
+}
+
+
+.chat-message{
+    color:blue;
+    border-style: 1px solid white;
+    background-color: red;
+    font-size:1em;
+ }
+
+ #message-box{
+     color:blue;
+ }
+ 
