--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,8 +2,8 @@
 <body>
         <nav>
             <ul>
-                <li><a href="/home">home</a></li>
-                <li><a href="/profile">profile</a></li>
+                <li><a href="/filter">matchen</a></li>
+                <li><a href="/profile/:profileId">profiel</a></li>
                 <li><a href="/chat">chats</a></li>
             </ul>
         </nav>
