--- a/static/stylesheets/css/main.css
+++ b/static/stylesheets/css/main.css
@@ -76,9 +76,8 @@ body {
   height: 100%;
   background-attachment: fixed;
   /* Setions */
-  /* Forms */
 }
-body h1 {
+body h1, body h2 {
   font-family: Futura Light;
   letter-spacing: 0.3em;
   text-transform: uppercase;
@@ -107,31 +106,32 @@ body p a {
   border-bottom: 1px solid white;
   padding-bottom: 0.3em;
 }
-body section,
-body div {
+body section {
   margin-top: 2em;
 }
-body form {
+
+/* Forms */
+form {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-body form ul {
+form ul {
   padding: 0;
 }
-body form li {
+form li {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin: 1.5em;
 }
-body form label {
+form label {
   font-family: Futura Light;
   font-size: 1em;
   padding-bottom: 0.5em;
   letter-spacing: 0.2em;
 }
-body form input {
+form input {
   border-style: none;
   background-color: white;
   padding: 1em;
@@ -142,12 +142,23 @@ body form input {
   letter-spacing: 0.2em;
   padding: 1em;
 }
-body form input:not([type=radio]):not([type=checkbox]) {
+form input:not([type=radio]):not([type=checkbox]) {
   width: 70vw;
 }
-body form input[type=radio],
-body form input[type=checkbox] {
+form input[type=radio],
+form input[type=checkbox] {
   margin: 0em 1em;
+}
+form select {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-style: none;
+  color: white;
+  font-family: Futura;
+  letter-spacing: 0.2em;
+  padding: 1em;
+  margin-top: 1em;
+  width: 21em;
+  border-radius: 0.2em;
 }
 
 /* Buttons */
@@ -191,21 +202,7 @@ button:enabled:disabled {
   flex-wrap: wrap;
   justify-content: center;
 }
-.createProfile form fieldset {
-  margin-top: 2em;
-}
-.createProfile form .sportsList label {
-  margin-left: 2em;
-}
-.createProfile form legend {
-  font-size: 1em;
-  letter-spacing: 0.2em;
-  margin-top: 2em;
-  font-family: Futura Light;
-  text-align: center;
-  line-height: 2em;
-}
-.createProfile form div:nth-of-type(4) {
+.createProfile form div:nth-of-type(3) {
   position: absolute;
   top: 30vw;
   margin: auto;
@@ -216,19 +213,12 @@ button:enabled:disabled {
   border-radius: 100%;
   box-shadow: rgba(255, 255, 255, 0.3) 0.1rem 0px 0.5rem 0.2rem;
 }
-.createProfile form div:nth-of-type(4) label {
+.createProfile form div:nth-of-type(3) label {
   padding-bottom: 4em;
   padding-top: 3em;
   text-align: center;
   line-height: 1.5em;
   margin: 0em 1em;
-}
-.createProfile form ul {
-  margin: 0 auto;
-  border-radius: 0.2em;
-}
-.createProfile form li {
-  justify-content: flex-start;
 }
 .createProfile form input[type=file] {
   display: none;
@@ -240,6 +230,83 @@ button:enabled:disabled {
 }
 .createProfile form button {
   margin-top: 2em;
+}
+
+/* profile.ejs */
+section.profile {
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10em;
+}
+section.profile p {
+  flex-grow: 2;
+}
+
+img[alt=profilepic] {
+  position: absolute;
+  top: 25vw;
+  margin: 0 auto;
+  margin-bottom: 2em;
+  width: 40%;
+  height: 40vw;
+  border-radius: 100%;
+  left: 0;
+  right: 0;
+}
+
+/* editProfile.ejs */
+form.editprofile {
+  margin: 1.5em;
+}
+form.editprofile label {
+  padding-top: 0.8em;
+}
+form.editprofile input {
+  margin: 0.8em;
+}
+form.editprofile div {
+  text-align: center;
+}
+form.editprofile div input:not[type=radio] {
+  padding: 1em;
+}
+form.editprofile div:first-of-type {
+  margin-top: 55vw;
+}
+form.editprofile div:last-of-type {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 20%;
+  right: 20%;
+}
+form.editprofile div:last-of-type img[alt="je profielfoto"] {
+  align-self: center;
+  border-radius: 100%;
+  width: 60%;
+  height: 60%;
+}
+form.editprofile div:last-of-type input[id=upload] {
+  display: none;
+}
+form.editprofile textarea {
+  width: 70vw;
+  height: 7em;
+  padding: 0.8em;
+  margin: 0.8em;
+}
+
+/* filterSports.ejs */
+.sportsList {
+  padding: 1em;
+}
+.sportsList li {
+  justify-content: flex-start;
+}
+
+.filterSports form {
+  flex: none;
 }
 
 /* partials/nav.ejs */
@@ -261,43 +328,19 @@ nav a {
   color: white;
 }
 
-/* Buttons */
-nav li:enabled {
-  background-color: #000000;
-  color: #ffffff;
-  border-style: none;
-  width: 50vw;
-  padding: 1.5em 1em;
-  font-family: Futura;
-  font-size: 0.7em;
-  letter-spacing: 0.2em;
-  border-radius: 0.2em;
-  text-transform: uppercase;
-}
-nav li:enabled:hover {
-  background-color: #000000;
-  border: 1px solid #ffffff;
-}
-nav li:enabled:active {
-  background-color: linear-gradient 0deg, #cb2f4f 0%, #c32a4b 100%;
-}
-nav li:enabled:focus {
-  background-color: #000000;
-  box-shadow: inset 0 0 1px #ffffff00;
-}
-nav li:enabled:disabled {
-  background-color: #000000;
-}
-
-.chat-message {
-  color: blue;
+.message {
   border-style: 1px solid white;
-  background-color: red;
+  background-color: white;
   font-size: 1em;
+  color: black;
+  width: 18em;
+  border-radius: 0.2em;
+  margin: 0 auto;
 }
 
-#message-box {
-  color: blue;
+/* sendMail.ejs */
+.sendMail form {
+  margin: 1.5em;
 }
 
 /*# sourceMappingURL=main.css.map */
